fixed footer social menu spacings

--- a/assets/less/footer.less
+++ b/assets/less/footer.less
@@ -26,6 +26,23 @@ footer {
 				margin: 0 0 20px;
 			}
 
+			ul.list-inline {
+				margin: 0;
+				font-size: 0;
+
+				li {
+					padding: 0 10px;
+
+					&:first-child {
+						padding-left: 0;
+					}
+
+					&:last-child {
+						padding-right: 0;
+					}
+				}
+			}
+
 			ul:not(.social-menu) {
 				margin: 0;
 				padding: 0;
